{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 19,
  "lineage": "26b68ffd-a081-abdf-d43f-613f6c61c139",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001089eb624938d9f",
            "arn": "arn:aws:ec2:us-east-2:448042116170:instance/i-064df25899b4ac709",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064df25899b4ac709",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c0bcaafc93511aa",
            "private_dns": "ip-172-31-45-130.us-east-2.compute.internal",
            "private_ip": "172.31.45.130",
            "public_dns": "ec2-18-225-33-127.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.33.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7e38f7e0ec7f3ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-aws-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d26adc9e",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ade25d21b1b58a92"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001089eb624938d9f",
            "arn": "arn:aws:ec2:us-east-2:448042116170:instance/i-04f49dcb2fa52b2b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f49dcb2fa52b2b2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d8940f89d6caa05",
            "private_dns": "ip-172-31-19-161.us-east-2.compute.internal",
            "private_ip": "172.31.19.161",
            "public_dns": "ec2-18-116-29-241.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.29.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-071db94ae1296a8ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-aws-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b7450bcd",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ade25d21b1b58a92"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001089eb624938d9f",
            "arn": "arn:aws:ec2:us-east-2:448042116170:instance/i-04f46a5b335d018d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f46a5b335d018d7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0827ec988fbd55f92",
            "private_dns": "ip-172-31-35-142.us-east-2.compute.internal",
            "private_ip": "172.31.35.142",
            "public_dns": "ec2-3-144-245-11.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.245.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-099679b57e45e4f7e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-aws-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d26adc9e",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ade25d21b1b58a92"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001089eb624938d9f",
            "arn": "arn:aws:ec2:us-east-2:448042116170:instance/i-0a08e72a654321521",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a08e72a654321521",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-062f879c6b916d7e7",
            "private_dns": "ip-172-31-22-34.us-east-2.compute.internal",
            "private_ip": "172.31.22.34",
            "public_dns": "ec2-3-17-148-211.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.148.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c3398e98e7e2e6e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-aws-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b7450bcd",
            "tags": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ade25d21b1b58a92"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e4e35cccc6189f4",
            "arn": "arn:aws:ec2:us-east-1:448042116170:instance/i-0061c3b7bd9c5abb2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0061c3b7bd9c5abb2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08513b7929593b85c",
            "private_dns": "ip-172-31-87-153.ec2.internal",
            "private_ip": "172.31.87.153",
            "public_dns": "ec2-3-84-12-156.compute-1.amazonaws.com",
            "public_ip": "3.84.12.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bd80556ab20b02ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-aws-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04dd910582add33a9",
            "tags": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de9f52eb81d1a0ea"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e4e35cccc6189f4",
            "arn": "arn:aws:ec2:us-east-1:448042116170:instance/i-0d06251716b39ce5f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d06251716b39ce5f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c09ef782b15b0f24",
            "private_dns": "ip-172-31-85-54.ec2.internal",
            "private_ip": "172.31.85.54",
            "public_dns": "ec2-44-202-55-55.compute-1.amazonaws.com",
            "public_ip": "44.202.55.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fdc6864abf39a6d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-aws-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04dd910582add33a9",
            "tags": {
              "Name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de9f52eb81d1a0ea"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:448042116170:security-group/sg-0ade25d21b1b58a92",
            "description": "terraform-aws-ssh",
            "egress": [],
            "id": "sg-0ade25d21b1b58a92",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.209.235.161/32",
                  "200.97.174.58/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-aws-ssh",
            "name_prefix": null,
            "owner_id": "448042116170",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acesso-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-f545ac9e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448042116170:security-group/sg-0de9f52eb81d1a0ea",
            "description": "terraform-aws-ssh",
            "egress": [],
            "id": "sg-0de9f52eb81d1a0ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.209.235.161/32",
                  "200.97.174.58/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-aws-ssh",
            "name_prefix": null,
            "owner_id": "448042116170",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acesso-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-080a39c97214a1046"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}